refactor(service) TaskServiceImpl for user check